--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 
 ## Thymeleaf setting false ##
 # spring.thymeleaf.enabled=false
+
+## JWT ##
+jwt.issuer: tlswnd919@gmail.com
+jwt.secret_key: nomore
