--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 ## JWT ##
 jwt.issuer: tlswnd919@gmail.com
 jwt.secret_key: nomore
+
+
+## 
+spring.devtools.restart.enabled=true
