feat:아이디찾기, 이메일인증(진행중) 로직 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-## Database ##
+## DATABASE ##
 spring.datasource.url=jdbc:mariadb://35.87.206.219:3306/nomore?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=nomore
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 
 
-## Security ##
+## SECURITY ##
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 ## Thymeleaf setting false ##
@@ -21,6 +21,15 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 jwt.issuer: tlswnd919@gmail.com
 jwt.secret_key: nomore
 
+## EMAIL AUTH ##
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tlswnd191@gmail.com
+spring.mail.password=gfpverttywfatkjt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
-## 
+
+
+## RESTART RUN SETTING ##
 spring.devtools.restart.enabled=true
