--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,11 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
-
+    // EMAIL AUTH //
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'javax.mail:mail:1.4'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	
 
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
