feat : 로그아웃/회원탈퇴 구현 완료, 커스텀 예외처리 클래스 생성 fix : dto 수정 및 코드 리팩토링

--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 
 	// 새로고침 시 코드 반영
-	implementation 'org.springframework.boot:spring-boot-devtools'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	// 테스트 전용 의존성 // 
 	testImplementation 'org.projectlombok:lombok:1.18.30'
