--- a/build.gradle
+++ b/build.gradle
@@ -60,3 +60,11 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jar{
+	manifest{
+		attributes(
+			'Main-Class' : 'com.kimoi.nomore.NomoreApplication'
+		)
+	}
+}
